# scrying-glass

./: .gitignore  pyproject.toml  shell.nix
scripts/: generate_database.py
src/: card_detector.py  main.py
src/utils/: __init__.py  image_processing.py
